cmake_minimum_required(VERSION 3.19)
project(sand)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-march=znver2 -mtune=znver2 -pthread -fopenmp")
add_executable(sand main.cpp Renderer.h variables.h importsxd.h Particle.h Chunk.h Map.h ChunkWorker.h ParticleSystem.h)
target_link_libraries(sand sfml-graphics sfml-system sfml-window tbb)